# eta-rs

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml  README.md
crates/cli/examples/: lambda-terse.lisp  lambda.lisp
crates/cli/src/: main.rs
crates/embedded/: Cargo.toml  README.md
crates/embedded/src/: main.rs  main.rs.1
crates/wasm/: .gitignore  Cargo.toml  Makefile
crates/wasm/mail/: .gitignore  Makefile  wrangler.toml
crates/wasm/mail/src/: main.js  worker-wasm.js
crates/wasm/src/: lib.rs
crates/wasm/web/: .gitignore  LICENSE  Makefile  README.md
crates/wasm/web/src/: index.html  main.js
crates/wasm/web/static/: index.html
