[workspace]
members = ["crates/cli", "crates/embedded", "crates/wasm"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "BSD-2-Clause"
authors = ["Hans S. <hans@0x8.io>"]
description = "Platform specific Human-Interfaces for Eta-Core"
repository = "https://github.com/DaBigBlob/eta-rs"
readme = "README.md"

[profile.release]
lto = true           # better cross-crate optimization
codegen-units = 1    # better optimization / slower build
panic = "abort"      # no unwinding tables / smaller
debug = 0            # no debug info
strip = true         # strip as much as possible
incremental = false  # cleaner/reproducible-ish

[workspace.dependencies]
eta-core = "0.7.0"
# eta-core = { path = "../eta-core" }
