[package]
name = "eta-cli"
description = "CLI for the Eta calculus"
version = "0.1.9"

authors = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "eta"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
eta-core = { workspace = true }
