[package]
name = "esp32s2-embedded"
version      = "0.1.0"

authors = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s2", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s2"] }
critical-section = "1.2.0"
esp-alloc        = "0.9.0"
eta-core = "0.3.0"
# eta-core = { path = "../../eta-core" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
