[package]
name = "eta-wasm"
version = "0.1.0"

authors = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
eta-core = { workspace = true }
wasm-bindgen = { version = "0.2.108", default-features = false }
